force-app/main/default/objects/Order_Line_Items__c/Order_Line_Items__c.object-meta.xml
<CustomObject>
    <label>Order Line Item</label>
    <nameField>
        <displayFormat>OLI-{0000}</displayFormat>
        <label>Order Line Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>