force-app/main/default/objects/Order_Line_Items__c/fields/Cancellation_Refund__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Refund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cancellation Refund</label>
    <referenceTo>Cancellation_Refund__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>