force-app/main/default/objects/Order_Line_Items__c/fields/Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Departure Date</label>
    <referenceTo>Departure_Date__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>