force-app/main/default/objects/Order_Line_Items__c/fields/HSS_Amount__c.field-meta.xml
<CustomField>
    <fullName>HSS_Amount__c</fullName>
    <formula>IF( Passenger_Quantity__c&lt;=0, 0, 
IF(
ISPICKVAL(Departure_Date__r.Hss_Category__c, &apos;Per Day&apos;), Departure_Date__r.HSS_Price__c* Orders__r.Trip_Option__r.Number_of_days__c, Departure_Date__r.HSS_Price__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HSS Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>