force-app/main/default/objects/Order_Line_Items__c/fields/Option_Surchange__c.field-meta.xml
<CustomField>
    <fullName>Option_Surchange__c</fullName>
    <formula>Departure_Date__r.Price__c *  Passenger_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Option Surchange</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>