force-app/main/default/objects/Order_Line_Items__c/fields/OrderRT__c.field-meta.xml
<CustomField>
    <fullName>OrderRT__c</fullName>
    <formula>Orders__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderRT</label>
    <type>Text</type>
</CustomField>