force-app/main/default/objects/Order_Line_Items__c/fields/Orders__c.field-meta.xml
<CustomField>
    <fullName>Orders__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Orders</label>
    <referenceTo>Orders__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>