force-app/main/default/objects/Order_Line_Items__c/fields/Passenger_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Quantity__c</fullName>
    <label>Passenger Quantity</label>
    <summaryForeignKey>Passenger__c.Order_Line_Items__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>