force-app/main/default/objects/Order_Line_Items__c/fields/Solo_Passenger_Number__c.field-meta.xml
<CustomField>
    <fullName>Solo_Passenger_Number__c</fullName>
    <label>Solo Passenger Number</label>
    <summaryFilterItems>
        <field>Passenger__c.Passenger_Type__c</field>
        <operation>equals</operation>
        <value>Single</value>
    </summaryFilterItems>
    <summaryForeignKey>Passenger__c.Order_Line_Items__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>