force-app/main/default/objects/Order_Line_Items__c/fields/Solo_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Solo_Surcharge__c</fullName>
    <formula>Departure_Date__r.Single_Occupancy__c *  Solo_Passenger_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solo Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>