force-app/main/default/objects/Order_Line_Items__c/fields/Sub_Options__c.field-meta.xml
<CustomField>
    <fullName>Sub_Options__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Options</label>
    <referenceTo>Sub_Options__c</referenceTo>
    <relationshipLabel>Order Line Items</relationshipLabel>
    <relationshipName>Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>