force-app/main/default/objects/Order_Line_Items__c/fields/Suboption_Amount__c.field-meta.xml
<CustomField>
    <fullName>Suboption_Amount__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suboption Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>