force-app/main/default/objects/Order_Line_Items__c/fields/Total_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Total_Surcharge__c</fullName>
    <formula>IF(OrderRT__c= &apos;Self Guided&apos; || OrderRT__c=&apos;Group Guided&apos; , IF(TEXT(Pricing_Model__c ) = &apos;Solo&apos;, Sub_Options__r.solo_surcharge__c, 0),  
  IF(OrderRT__c=&apos;Customized Self Guided	&apos; || OrderRT__c=&apos;Customized Group Guided&apos;, IF(TEXT(Pricing_Model__c ) = &apos;Solo&apos;, Sub_Options__r.solo_surcharge_nz__c, 0), 0) ) 
* PAX_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>