force-app/main/default/objects/Order_Line_Items__c/fields/Unique_OLI_Code__c.field-meta.xml
<CustomField>
    <fullName>Unique_OLI_Code__c</fullName>
    <label>Unique OLI Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>