force-app/main/default/objects/Order_Line_Items__c/listViews/All_User.listView-meta.xml
<ListView>
    <fullName>All_User</fullName>
    <columns>NAME</columns>
    <columns>Orders__c</columns>
    <columns>Departure_Date__c</columns>
    <columns>Passenger_Quantity__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>HSS_Amount__c</columns>
    <filterScope>Mine</filterScope>
    <label>All User</label>
</ListView>